--- a/register.html
+++ b/register.html
@@ -138,12 +138,12 @@
       <button class="register-btn" id="registerBtn">REGISTER</button>
 
       <p class="login-text">Already have an account?</p>
-      <a href="index.html" class="login-link">LOGIN</a>
+      <a href="login.html" class="login-link">LOGIN</a>
     </div>
   </div>
 
   <!-- Firebase register logic -->
-  <script type="module" src="js/auth.js"></script>
+  <script type="module" src="auth.js"></script>
 
 </body>
 </html>
