--- a/login.html
+++ b/login.html
@@ -166,13 +166,13 @@
 
 
 
-      <p class="signup-text">Or</p>
-      <a href="#" class="signup-link">register</a>
+      <p class="signup-text">Don't have an account?</p>
+      <a href="register.html" class="signup-link">register</a>
     </div>
   </div>
 
   <!-- Firebase login logic -->
-  <script type="module" src="js/auth.js"></script>
+  <script type="module" src="auth.js"></script>
   <script src="js/main.js"></script>
 
 </body>
