--- a/closet.html
+++ b/closet.html
@@ -36,7 +36,7 @@
         .logo {
             font-size: 2rem;
             font-style: italic;
-            color: #8b4513;
+            color: #6b0000;
             font-weight: bold;
         }
 
@@ -47,20 +47,20 @@
         }
 
         nav a {
-            color: #5d4037;
+            color: #6b0000;
             text-decoration: none;
             font-size: 1rem;
             transition: color 0.3s;
         }
 
         nav a:hover {
-            color: #8b4513;
+            color: #b83838;
         }
 
         .back-btn {
             background: none;
-            border: 2px solid #d7ccc8;
-            color: #8b4513;
+            border: 2px solid #6b0000;
+            color: #6b0000;
             padding: 0.6rem 1.5rem;
             border-radius: 50px;
             font-size: 0.9rem;
