--- a/index.html
+++ b/index.html
@@ -37,18 +37,17 @@
         }
 
         .logo {
-            display: flex;
-            flex-direction: column;
-            cursor: pointer;
+            font-size: 2rem;
+            font-style: italic;
+            color: #6b0000;
+            font-weight: bold;
         }
 
         .logo-text {
             font-size: 2rem;
             font-weight: 600;
             color: #6b0000;
-            letter-spacing: 1px;
             font-style: italic;
-            font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
         }
 
         .hero {
