--- a/outfits.html
+++ b/outfits.html
@@ -175,7 +175,7 @@
   <header>
     <div class="logo">Closetry</div>
     <nav>
-      <a href="index.html" id="signOutBtn">Sign out</a>
+      <button id="signOutBtn">Sign out</button>
       <button class="back-btn" onclick="history.back()">← Back</button>
     </nav>
   </header>
