--- a/userpage.html
+++ b/userpage.html
@@ -261,7 +261,7 @@
     <header>
         <div class="logo">Closetry</div>
         <nav>
-            <a href="index.html" id="signOutBtn">Sign out</a>
+            <button id="signOutBtn">Sign out</button>
         </nav>
     </header>
 
