--- a/closet/closet.html
+++ b/closet/closet.html
@@ -107,8 +107,17 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="brand">Brand (Optional)</label>
-                        <input type="text" id="brand" placeholder="e.g., Zara, H&M">
+                        <label for="brand">Mood</label>
+                        <select id="occasion" required>
+                            <option value="">Select Mood</option>
+                            <option value="everyday">Everyday</option>
+                            <option value="work">Work</option>
+                            <option value="party">Party</option>
+                            <option value="date">Date Night</option>
+                            <option value="sport">Sport/Gym</option>
+                            <option value="beach">Beach</option>
+                            <option value="formal-event">Formal Event</option>
+                        </select>
                     </div>
                 </div>
 
