--- a/userpage/userpage.html
+++ b/userpage/userpage.html
@@ -40,16 +40,16 @@
             </div>
             <div class="gallery-grid" id="clothesGrid">
                 <div class="gallery-item">
-                    <div class="empty-item">👗</div>
+                    <div class="empty-item"></div>
                 </div>
                 <div class="gallery-item">
-                    <div class="empty-item">👔</div>
+                    <div class="empty-item"></div>
                 </div>
                 <div class="gallery-item">
-                    <div class="empty-item">👖</div>
+                    <div class="empty-item"></div>
                 </div>
                 <div class="gallery-item">
-                    <div class="empty-item">👠</div>
+                    <div class="empty-item"></div>
                 </div>
             </div>
         </div>
