fixed issues related to all pages

--- a/login/login.html
+++ b/login/login.html
@@ -14,6 +14,8 @@
     <div class="login-card">
       <h2>Sign in <span class="brand">Closetry</span></h2>
 
+      <div id="errorMessage" style="color: #d32f2f; background: #ffebee; padding: 0.75rem; border-radius: 8px; margin-bottom: 1rem; display: none; text-align: center;"></div>
+
       <div class="input-group">
         <label>Email</label>
         <input type="email" id="email" placeholder="Type your email">
