--- a/outfits/outfits.html
+++ b/outfits/outfits.html
@@ -34,9 +34,22 @@
           <option value="business">Business</option>
           <option value="streetwear">Streetwear</option>
           <option value="athletic">Athletic</option>
-          <option value="bohemian">Bohemian</option>
           <option value="vintage">Vintage</option>
           <option value="minimalist">Minimalist</option>
+        </select>
+      </div>
+
+      <div class="filter-group">
+        <label for="Mood">Mood</label>
+        <select id="Mood">
+          <option value="">Any Mood</option>
+          <option value="excited">Excited</option>
+          <option value="happy">Happy</option>
+          <option value="sad">Sad</option>
+          <option value="angry">Angry</option>
+          <option value="confident">Confident</option>
+          <option value="romantic">Romantic</option>
+          <option value="scared">Scared</option>
         </select>
       </div>
 
