--- a/closet/closet.html
+++ b/closet/closet.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Upload Clothing - Closetry</title>
     <link rel="stylesheet" href="closet.css">
 </head>
+
 <body>
-    <iframe src="../header/header.html" style="border: none; width: 100%; height: 70px; display: block; position: fixed; top: 0; left: 0; z-index: 1000; overflow: hidden;"></iframe>
+    <iframe src="../header/header.html"
+        style="border: none; width: 100%; height: 70px; display: block; position: fixed; top: 0; left: 0; z-index: 1000; overflow: hidden;"></iframe>
 
     <div class="container">
         <div class="upload-panel">
@@ -16,9 +19,9 @@
 
             <div class="upload-area" id="uploadArea">
                 <svg class="upload-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/>
-                    <polyline points="17 8 12 3 7 8"/>
-                    <line x1="12" y1="3" x2="12" y2="15"/>
+                    <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4" />
+                    <polyline points="17 8 12 3 7 8" />
+                    <line x1="12" y1="3" x2="12" y2="15" />
                 </svg>
                 <div class="upload-text">Choose a photo of your clothing item</div>
                 <div class="upload-subtext">Click to browse or drag and drop</div>
@@ -33,7 +36,7 @@
                         <input type="text" id="itemName" placeholder="e.g., Blue Denim Jacket" required>
                     </div>
 
-                    <div class="form-group">
+                    <div class="form-group full-width">
                         <label for="category">Category</label>
                         <select id="category" required>
                             <option value="">Select category</option>
@@ -46,79 +49,74 @@
                         </select>
                     </div>
 
-                    <div class="form-group">
+                    <div class="form-group full-width">
                         <label for="color">Color</label>
-                        <select id="color" required>
-                            <option value="">Select color</option>
-                            <option value="black">Black</option>
-                            <option value="white">White</option>
-                            <option value="brown">Brown</option>
-                            <option value="gray">Gray</option>
-                            <option value="beige">Beige</option>
-                            <option value="navy">Navy</option>
-                            <option value="blue">Blue</option>
-                            <option value="red">Red</option>
-                            <option value="pink">Pink</option>
-                            <option value="green">Green</option>
-                            <option value="yellow">Yellow</option>
-                            <option value="multicolor">Multicolor</option>
-                        </select>
+                        <div class="checkbox-group" id="colorGroup">
+                            <label class="checkbox-item"><input type="checkbox" value="black"> Black</label>
+                            <label class="checkbox-item"><input type="checkbox" value="white"> White</label>
+                            <label class="checkbox-item"><input type="checkbox" value="brown"> Brown</label>
+                            <label class="checkbox-item"><input type="checkbox" value="gray"> Gray</label>
+                            <label class="checkbox-item"><input type="checkbox" value="beige"> Beige</label>
+                            <label class="checkbox-item"><input type="checkbox" value="navy"> Navy</label>
+                            <label class="checkbox-item"><input type="checkbox" value="blue"> Blue</label>
+                            <label class="checkbox-item"><input type="checkbox" value="red"> Red</label>
+                            <label class="checkbox-item"><input type="checkbox" value="pink"> Pink</label>
+                            <label class="checkbox-item"><input type="checkbox" value="green"> Green</label>
+                            <label class="checkbox-item"><input type="checkbox" value="yellow"> Yellow</label>
+                            <label class="checkbox-item"><input type="checkbox" value="multicolor"> Multicolor</label>
+                        </div>
                     </div>
 
                     <div class="form-group">
-                        <label for="season">Season</label>
-                        <select id="season" required>
-                            <option value="">Select season</option>
-                            <option value="spring">Spring</option>
-                            <option value="summer">Summer</option>
-                            <option value="autumn">Autumn</option>
-                            <option value="winter">Winter</option>
-                            <option value="all-season">All Season</option>
-                        </select>
+                        <label for="Mood">Mood</label>
+                        <div class="checkbox-group" id="moodGroup">
+                            <label class="checkbox-item"><input type="checkbox" value="excited"> Excited</label>
+                            <label class="checkbox-item"><input type="checkbox" value="happy"> Happy</label>
+                            <label class="checkbox-item"><input type="checkbox" value="sad"> Sad</label>
+                            <label class="checkbox-item"><input type="checkbox" value="angry"> Angry</label>
+                            <label class="checkbox-item"><input type="checkbox" value="confident"> Confident</label>
+                            <label class="checkbox-item"><input type="checkbox" value="romantic"> Romantic</label>
+                            <label class="checkbox-item"><input type="checkbox" value="scared"> Scared</label>
+                        </div>
                     </div>
 
                     <div class="form-group">
                         <label for="style">Style</label>
-                        <select id="style" required>
-                            <option value="">Select style</option>
-                            <option value="casual">Casual</option>
-                            <option value="formal">Formal</option>
-                            <option value="business">Business</option>
-                            <option value="streetwear">Streetwear</option>
-                            <option value="athletic">Athletic</option>
-                            <option value="bohemian">Bohemian</option>
-                            <option value="vintage">Vintage</option>
-                            <option value="minimalist">Minimalist</option>
-                        </select>
+                        <div class="checkbox-group" id="styleGroup">
+                            <label class="checkbox-item"><input type="checkbox" value="casual"> Casual</label>
+                            <label class="checkbox-item"><input type="checkbox" value="formal"> Formal</label>
+                            <label class="checkbox-item"><input type="checkbox" value="business"> Business</label>
+                            <label class="checkbox-item"><input type="checkbox" value="streetwear"> Streetwear</label>
+                            <label class="checkbox-item"><input type="checkbox" value="athletic"> Athletic</label>
+                            <label class="checkbox-item"><input type="checkbox" value="vintage"> Vintage</label>
+                            <label class="checkbox-item"><input type="checkbox" value="minimalist"> Minimalist</label>
+                        </div>
                     </div>
 
                     <div class="form-group">
                         <label for="occasion">Occasion</label>
-                        <select id="occasion" required>
-                            <option value="">Select occasion</option>
-                            <option value="everyday">Everyday</option>
-                            <option value="work">Work</option>
-                            <option value="party">Party</option>
-                            <option value="date">Date Night</option>
-                            <option value="sport">Sport/Gym</option>
-                            <option value="beach">Beach</option>
-                            <option value="formal-event">Formal Event</option>
-                        </select>
+                        <div class="checkbox-group" id="occasionGroup">
+                            <label class="checkbox-item"><input type="checkbox" value="everyday"> Everyday</label>
+                            <label class="checkbox-item"><input type="checkbox" value="work"> Work</label>
+                            <label class="checkbox-item"><input type="checkbox" value="party"> Party</label>
+                            <label class="checkbox-item"><input type="checkbox" value="date"> Date Night</label>
+                            <label class="checkbox-item"><input type="checkbox" value="sport"> Sport/Gym</label>
+                            <label class="checkbox-item"><input type="checkbox" value="beach"> Beach</label>
+                            <label class="checkbox-item"><input type="checkbox" value="formal-event"> Formal
+                                Event</label>
+                        </div>
                     </div>
 
                     <div class="form-group">
-                        <label for="brand">Mood</label>
-                        <select id="occasion" required>
-                            <option value="">Select Mood</option>
-                            <option value="everyday">Everyday</option>
-                            <option value="work">Work</option>
-                            <option value="party">Party</option>
-                            <option value="date">Date Night</option>
-                            <option value="sport">Sport/Gym</option>
-                            <option value="beach">Beach</option>
-                            <option value="formal-event">Formal Event</option>
-                        </select>
+                        <label for="season">Season</label>
+                        <div class="checkbox-group" id="seasonGroup">
+                            <label class="checkbox-item"><input type="checkbox" value="spring"> Spring</label>
+                            <label class="checkbox-item"><input type="checkbox" value="summer"> Summer</label>
+                            <label class="checkbox-item"><input type="checkbox" value="autumn"> Autumn</label>
+                            <label class="checkbox-item"><input type="checkbox" value="winter"> Winter</label>
+                        </div>
                     </div>
+
                 </div>
 
                 <div class="submit-section">
@@ -131,4 +129,5 @@
 
     <script type="module" src="closet.js"></script>
 </body>
+
 </html>
