--- a/header/header.html
+++ b/header/header.html
@@ -12,6 +12,6 @@
     </nav>
   </header>
 
-  <script src="header.js"></script>
+  <script type="module" src="header.js"></script>
 </body>
 </html>
