fix upload issues

--- a/closet/closet.html
+++ b/closet/closet.html
@@ -65,6 +65,7 @@
                             <label class="checkbox-item"><input type="checkbox" value="yellow"> Yellow</label>
                             <label class="checkbox-item"><input type="checkbox" value="multicolor"> Multicolor</label>
                         </div>
+                        <div class="selected-values" id="colorSelected">Selected: None</div>
                     </div>
 
                     <div class="form-group">
@@ -78,6 +79,7 @@
                             <label class="checkbox-item"><input type="checkbox" value="romantic"> Romantic</label>
                             <label class="checkbox-item"><input type="checkbox" value="scared"> Scared</label>
                         </div>
+                        <div class="selected-values" id="moodSelected">Selected: None</div>
                     </div>
 
                     <div class="form-group">
@@ -88,9 +90,11 @@
                             <label class="checkbox-item"><input type="checkbox" value="business"> Business</label>
                             <label class="checkbox-item"><input type="checkbox" value="streetwear"> Streetwear</label>
                             <label class="checkbox-item"><input type="checkbox" value="athletic"> Athletic</label>
+                            <label class="checkbox-item"><input type="checkbox" value="bohemian"> Bohemian</label>
                             <label class="checkbox-item"><input type="checkbox" value="vintage"> Vintage</label>
                             <label class="checkbox-item"><input type="checkbox" value="minimalist"> Minimalist</label>
                         </div>
+                        <div class="selected-values" id="styleSelected">Selected: None</div>
                     </div>
 
                     <div class="form-group">
@@ -105,6 +109,7 @@
                             <label class="checkbox-item"><input type="checkbox" value="formal-event"> Formal
                                 Event</label>
                         </div>
+                        <div class="selected-values" id="occasionSelected">Selected: None</div>
                     </div>
 
                     <div class="form-group">
@@ -115,6 +120,7 @@
                             <label class="checkbox-item"><input type="checkbox" value="autumn"> Autumn</label>
                             <label class="checkbox-item"><input type="checkbox" value="winter"> Winter</label>
                         </div>
+                        <div class="selected-values" id="seasonSelected">Selected: None</div>
                     </div>
 
                 </div>
